--- a/Project2/makefile
+++ b/Project2/makefile
@@ -1,11 +1,22 @@
+IDIR = ../include
 CC = gcc
-DEPS= project2.h
 
-%.o: %.c $(DEPS)
+ODIR=obj
+LDIR =../lib
+
+_DEPS = project2.h
+DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
+
+OBJ = project2.o student2A.o student2B.o student2Common.o
+OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
+
+$(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $<
 
-p2: project2.o student2A.o student2B.o student2Common.o
-	$(CC) -o p2 project2.o student2A.o student2B.o student2Common.o
+p2: $(OBJ)
+	$(CC) -o $@ $^
+
+PHONY: clean
 
 clean:
-	rm ./*.o
+	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~
